DO328-chapter4.3-lab/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: frontend-destination-rule
spec:
  host: frontend
  subsets:
  - name: v2
    labels:
      version: v2
  - name: beta
    labels:
       version: beta
