DO328-chapter4.3-lab/serviceentry.yaml
apiVersion: networking.istio.io/v1beta1
kind: ServiceEntry
metadata:
  name: news-se
spec:
  hosts:
  - 
  ports:
  - number: 80
    name: http-80
    protocol: http
